# real-estate-price-prediction

./: .gitignore  CITATION.cff  Data_analysis.ipynb  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
data/: pipeline.joblib  readme.txt  testing_data_dirty.csv  training_data.csv  validation_data.csv
models/: lr.joblib  nn.joblib  pipeline.joblib  xgb.joblib
src/: Data_Prep.ipynb  Data_analysis.ipynb  models.ipynb  models_all.ipynb
web/: app.py
